--- a/public/style/ctool/sidebar.less
+++ b/public/style/ctool/sidebar.less
@@ -2,6 +2,7 @@
 .right-wrapper{
     width: 3.08rem;
     height: 100%;
+    overflow-y: auto;
     box-sizing: border-box;
     background-color: #fff;
     .user-info{
