--- a/views/teaHomeworkSharebase.ejs
+++ b/views/teaHomeworkSharebase.ejs
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <title><%= title%></title>
@@ -9,7 +8,7 @@
   <script src="/js/tool/rem.js"></script>
   <link rel="stylesheet" href="/style/ctool/common.css">
   <link rel="stylesheet" href="/style/ctool/iconfont.css">
-  <link rel="stylesheet" href="/style/assignGroupCase.css">
+  <link rel="stylesheet" href="/style/teaHomeworkSharebase.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <!--[if !IE]> -->
   <script type="text/javascript" src="/js/tool/jquery.js"></script>
@@ -34,25 +33,41 @@
             <div class="group-wrapper clearfix">
                 <%for(var i=0;i<4;i++){%>
                 <div class="item clearfix">
-                    <div class="item-left">A组</div>
-                    <div class="item-right">
-                        <div class="grouper">
-                            <img src="/images/default.png" alt="default">
-                            <p><span>组长</span> </span>流星雨</p>
-                        </div>
-                       
-                        <div class="groupers-box clearfix">
-                            <%for(var k=0;k<3;k++){%>
-                            <div class="sub-item">
-                                <img src="/images/default.png" alt="default">
-                                <p>流星雨</p>
-                            </div>
-                            <%}%>
-                        </div>
-                       
+                    <p class="group-name">A组</p>
+                    <%for(var k=0;k<4;k++){%>
+                    <div class="sub-item">
+                        <div class="not-upload"><img src="/images/noupload.png" alt="noupload"></div>
                     </div>
+                    <%}%>
                 </div>
                 <%}%>
+            </div>
+        </div>
+    </div>
+
+    <div class="share-wrapper">
+        <div class="share-box">
+            <div class="share-detail">
+                <textarea name="" cols="3" rows="5" placeholder="哈哈哈"></textarea>
+            </div>
+            <div class="share-pic clearfix">
+                <div class="share-item">
+                    <img src="/images/group-pic.png" alt="group-pic">
+                </div>
+                <div class="share-item upload-btn">+</div>
+            </div>
+            <div class="share-btns">
+                <a href="javascript:void(0)">取消</a>
+                <a href="javascript:void(0)" class="active">分享</a>
+            </div>
+            <div class="tips-box">
+                <div class="tips-wrapper">
+                    <p class="tips-msg">将此次编辑保留？</p>
+                    <div class="tips-btns clearfix">
+                        <a href="javascript:void(0)" class="not-save">不保留</a>
+                        <a href="javascript:void(0)" class="save active">保留</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
