--- a/public/style/ctool/base.less
+++ b/public/style/ctool/base.less
@@ -21,6 +21,8 @@
         }
         .main-wrapper{
             width: 100%;
+            height: calc(~"100% - 1.1rem");
+            overflow-y:auto; 
         }
     }
 }
