--- a/public/style/videoList.css
+++ b/public/style/videoList.css
@@ -107,3 +107,77 @@
   height: calc(100% - 1.1rem);
   overflow-y: auto;
 }
+.main-wrapper .title {
+  height: 1.6rem;
+  line-height: 1.6rem;
+  text-align: center;
+  font-size: 0.36rem;
+  color: #5c5a5a;
+}
+.main-wrapper .list-box {
+  width: 90.8%;
+  margin: 0 auto 0.6rem;
+  font-size: 0.26rem;
+  color: #5c5a5a;
+}
+.main-wrapper .list-box .list {
+  float: left;
+  width: 23%;
+  margin-right: 2.67%;
+  border: 1px solid #6c63ff;
+  padding: 0.3rem 0.15rem;
+}
+.main-wrapper .list-box .list .list-name {
+  width: 1rem;
+  height: 1rem;
+  line-height: 1rem;
+  margin: 0 auto -0.5rem;
+  border-radius: 50%;
+  border: 1px solid #6c63ff;
+  font-size: 0.36rem;
+  text-align: center;
+  background-color: #ffffff;
+  position: relative;
+  top: -0.8rem;
+}
+.main-wrapper .list-box .list .item {
+  border: 1px solid #dddddd;
+}
+.main-wrapper .list-box .list .item .item-cover {
+  float: left;
+  border-right: 1px solid #dddddd;
+  width: calc(70% - 1px);
+  padding: 0.05rem;
+}
+.main-wrapper .list-box .list .item .item-cover img {
+  width: 100%;
+  height: 100%;
+}
+.main-wrapper .list-box .list .item .item-msg {
+  float: left;
+  width: 30%;
+  padding: 0.05rem;
+}
+.main-wrapper .list-box .list .item .item-msg .item-headerpic {
+  width: 0.72rem;
+  height: 0.72rem;
+  border-radius: 50%;
+  margin: 0.1rem auto;
+  text-align: center;
+}
+.main-wrapper .list-box .list .item .item-msg .item-name {
+  text-align: center;
+  font-size: 12px!important;
+  margin: 0.1rem auto;
+}
+.main-wrapper .list-box .list .item .item-msg .item-play {
+  display: block;
+  width: 90%;
+  height: 0.52rem;
+  line-height: 0.52rem;
+  text-align: center;
+  background-color: #6c63ff;
+  color: #ffffff;
+  margin: 0 auto;
+  border-radius: 4px;
+}
